--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #6e1239;
+   /* background: #6e1239;*/
 }
 
 .container {
@@ -34,6 +34,21 @@ section {
 
 .tools-board .row{
     margin-bottom: 20px;
+}
+
+.undo-redo-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px !important;
+}
+
+.row-box {
+    color: #5A6168;
+    cursor: pointer;
+}
+
+.arrow-left, .arrow-right {
+    color: #5A6168;
 }
 
 .row .options {
@@ -129,6 +144,10 @@ section {
     cursor: pointer;
 }
 
+.buttons {
+    margin-bottom: 5px !important;
+}
+
 .buttons button{
     width: 100%;
     color: #fff;
@@ -154,15 +173,44 @@ section {
 }
 
 .buttons .save-img{
-    background-color: #4a98f7;
-    border: 1px solid #4a98f7;
+    background-color: #6e1239;
+    border: 1px solid #6e1239;
 }
 
 .drawing-board {
     flex: 1;
 }
 
+.hamburger {
+    width: fit-content;
+    padding: 10px;
+}
+
 .drawing-board canvas{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
 }
+
+
+
+.background-img {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  transform: rotate(deg);
+  background-image: 
+    conic-gradient(from 160deg at 70px 168.5px, #FDC12D 0deg 90deg, transparent 90deg),
+    conic-gradient(from 21deg at 168px 71px, #FDC12D 0deg 90deg, transparent 90deg),
+    conic-gradient(from 21deg at 141px 141px, #FEEBAE 0deg 114deg, transparent 114deg),
+    conic-gradient(from -21deg at 96.5px 44px, #1483CA 0deg 131.5deg, transparent 131.5deg), 
+    conic-gradient(from -70deg at 43.5px 97px, #FDC12D 0deg 115.5deg, transparent 115.5deg), 
+    conic-gradient(from 134.5deg at 141px 141px, #1483CA 0deg 114.5deg, transparent 114deg),
+    conic-gradient(from 160deg at 43.5px 97px, #FEEBAE 0deg 130.5deg, transparent 120deg 360deg);
+  background-color: skyblue;
+  background-size: 195px 195px;
+  background-position: -30px -30px;
+  background-repeat: repeat, repeat;
+}
+
